src/test/ui/unsized/issue-71659.stderr
error[E0277]: the trait bound `dyn Bar: CastTo<[i32]>` is not satisfied
  --> $DIR/issue-71659.rs:92:18
   |
LL |     let x = (*x).cast::<[i32]>();
   |                  ^^^^ the trait `CastTo<[i32]>` is not implemented for `dyn Bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
